<resources>
    <string name="app_name" translatable="false">org.openbmap.unifiedNlpProvider</string>
    <string name="prefs_none">None</string>
    <string name="operation_mode_summary">When using offline mode, be sure to press \'Update offline database\' below. Online mode queries the openbmap geolocation service and requires mobile data access</string>
    <string name="operation_mode_title">Online/offline mode</string>
    <string name="wifi_catalog_title">Offline database</string>
    <string name="wifi_catalog_summary">Select a offline database\nIf none is available, click \'Update offline database\'</string>
    <string name="database_folder_title">Database folder</string>
    <string name="database_folder_summary">Choose folder for offline database</string>
    <string name="debug_category_title">Debug</string>
    <string name="crash_report_summary_off">Don\'t send crash reports</string>
    <string name="crash_report_summary_on">Send crash reports</string>
    <string name="crash_reports_title">Crash reports</string>
    <string name="version">Openbmap UnifiedNLP Provider</string>
    <string name="using_online_mode">Using online mode!\nYou can download offline catalog any times later</string>
    <string name="offline_catalog_n_a">No offline catalog found</string>
    <string name="question_download_catalog">Download offline catalog now?</string>
    <string name="download_completed">Download completed</string>
    <string name="warning_catalog_missing">Be warned!\nOffline geolocation won\'t work without offline catalog</string>
    <string name="question_activate_offline_mode">Activate offline mode now?</string>
    <string name="using_offline_mode">Using offline mode!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="database_category_title">Geolocation database</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="debug_title">Activate debug messages</string>
    <string name="operation_mode_category">Operation mode</string>
    <string name="source_summary">Select which data is used for geolocation\n(Wifis and Cells, Wifis only, Cells only)</string>
    <string name="source_title">Use cells/wifis?</string>
    <string name="download_failed">Download failed! (Error code %s)</string>
    <string name="preferences">Preferences</string>
    <string name="new_folder">Create new folder</string>
    <string name="invalid_download">Invalid download</string>
    <string name="downloading">Downloading</string>
    <string name="error_save_file_failed">Download failed! Check SD card/permissions!</string>
    <string name="prefs_check_server">Contacting server…</string>
    <string name="please_stay_patient">Please stay patient..</string>
    <string name="prefs_download_wifi_catalog">Download Wifi Catalog</string>
    <string name="prefs_download_wifi_catalog_summary">Current size (10–400MB depending on country)</string>
    <string name="server_parsing_error">Error parsing server reply</string>
    <string name="wake_up_strategy_summary">When location stucks when phone sleeps you can try to wake up phone when cell is looked for</string>
    <string name="wake_up_strategy_title">Wake up strategy</string>
    <string name="nowakeup_label">No wake up</string>
    <string name="wakeuppartial_label">Wake up CPU only</string>
    <string name="wakeupfull_label">Wake up with display</string>
    <string name="debug_choose_file">Select directory for logging</string>
    <string name="log_file_lasting_summary">After specified number of time log file will recreated</string>
    <string name="log_file_lasting_title">Rotation of the log file</string>
    <string name="log_file_12_label">12 hours</string>
    <string name="log_file_24_label">a day</string>
    <string name="log_file_48_label">two days</string>
    <string name="log_file_72_label">three days</string>
    <string name="log_file_168_label">a week</string>
    <string name="log_file_720_label">a month</string>
</resources>
