<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
    <PreferenceCategory android:title="Credentials" >
        <EditTextPreference
            android:dialogTitle="Enter Openbmap user"
            android:key="credentials.user"
            android:summary="Openbmap user name"
            android:title="User" />
        <EditTextPreference
            android:dialogTitle="Enter Openbmap password"
            android:key="credentials.password"
            android:password="true"
            android:summary="Openbmap Password"
            android:title="Password" />
    </PreferenceCategory>
    -->
    <PreferenceCategory android:title="Operation mode" >
        <ListPreference
            android:defaultValue="online"
            android:entries="@array/listentries"
            android:entryValues="@array/listvalues"
            android:key="mode"
            android:summary="@string/operation_mode_summary"
            android:title="@string/operation_mode_title">
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="Geolocation database" >

        <ListPreference
            android:defaultValue="none"
            android:key="data.ref_database"
            android:summary="@string/wifi_catalog_summary"
            android:title="@string/wifi_catalog_title" >
        </ListPreference>

        <Preference
            android:key="data.download_wifi_catalog"
            android:summary="@string/update_wifi_catalog_summary"
            android:title="@string/update_wifi_catalog_title" >
        </Preference>

        <Preference
            android:title="@string/database_folder_title"
            android:key="data.dir"
            android:summary="@string/database_folder_summary">
        </Preference>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/debug_title" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="acra.enable"
            android:summaryOff="@string/crash_report_summary_off"
            android:summaryOn="@string/crash_report_summary_on"
            android:title="@string/crash_reports_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="debug.messages"
            android:summaryOff="Off"
            android:summaryOn="On"
            android:title="Activate debug messages" />
    </PreferenceCategory>
    <Preference
        android:key="version"
        android:title="@string/version"
        android:summary="-">
    </Preference>
</PreferenceScreen>